super stretch: fixed bug where you could buy after time was up

--- a/styles/style.css
+++ b/styles/style.css
@@ -138,7 +138,7 @@ form label{
 .bought {
     text-decoration:line-through;
     background-color: green;
-    pointer-events: none; 
+    /* pointer-events: none;  */
     cursor: pointer;
 }
 
